header-nav-list

--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
   </head>
   <body>
     <header>
-      <nav></nav>
+      <!-- NAV SECTION -->
+      <section class="nav-section">
+        <nav>
+          <div id="header-logo"><a href="#">LOGO</a></div>
+          <ul id="header-nav-list">
+            <li><a href="#">Scarica</a></li>
+            <li><a href="#">Perché Discord</a></li>
+            <li><a href="#">Nitro</a></li>
+            <li><a href="#">Sicurezza</a></li>
+            <li><a href="#">Assistenza</a></li>
+          </ul>
+          <div><a href="#">Accedi</a></div>
+        </nav>
+      </section>
+      <!-- HERO SECTION -->
       <section class="hero-section"></section>
     </header>
     <main>
