--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         </nav>
       </section>
       <!-- HERO SECTION -->
-      <section class="hero-section"></section>
+      <section class="hero-section">
+        <div class="hero-content"></div>
+      </section>
     </header>
     <main>
       <section></section>
