--- a/index.html
+++ b/index.html
@@ -28,10 +28,22 @@
       </section>
     </header>
     <main>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section class="feature-section">
+        <div class="feature-block">
+          <div class="feature-img"></div>
+          <div class="feature-content"></div>
+        </div>
+
+        <div class="feature-block">
+          <div class="feature-content"></div>
+          <div class="feature-img"></div>
+        </div>
+
+        <div class="feature-block">
+          <div class="feature-img"></div>
+          <div class="feature-content"></div>
+        </div>
+      </section>
     </main>
     <footer>
       <section></section>
