--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div class="hero-content"></div>
       </section>
     </header>
+    <!-- FEATURE SECTION -->
     <main>
       <section class="feature-section">
         <div class="feature-block">
@@ -42,6 +43,10 @@
         <div class="feature-block">
           <div class="feature-img"></div>
           <div class="feature-content"></div>
+        </div>
+
+        <div class="feature-block">
+          <div class="last-feature-content"></div>
         </div>
       </section>
     </main>
