--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@
       </section>
     </main>
     <footer>
-      <section></section>
+      <section>
+        <div class="col-social"></div>
+        <div class="col-footer"></div>
+        <div class="col-footer"></div>
+        <div class="col-footer"></div>
+        <div class="col-footer"></div>
+      </section>
       <section></section>
     </footer>
   </body>
