first footer section

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
       </section>
     </main>
     <footer>
-      <section>
+      <section class="first-footer-section container">
         <div class="col-social"></div>
         <div class="col-footer"></div>
         <div class="col-footer"></div>
         <div class="col-footer"></div>
         <div class="col-footer"></div>
       </section>
-      <section></section>
+      <section class="second-footer-section"></section>
     </footer>
   </body>
 </html>
