Second footer section and some fix

--- a/index.html
+++ b/index.html
@@ -22,35 +22,45 @@
           <div><a href="#">Accedi</a></div>
         </nav>
       </section>
+
       <!-- HERO SECTION -->
       <section class="hero-section">
         <div class="hero-content"></div>
       </section>
     </header>
+
     <!-- FEATURE SECTION -->
     <main>
-      <section class="feature-section">
-        <div class="feature-block">
-          <div class="feature-img"></div>
-          <div class="feature-content"></div>
+      <section>
+        <div class="feature-section">
+          <div class="feature-block container">
+            <div class="feature-img"></div>
+            <div class="feature-content"></div>
+          </div>
         </div>
-
-        <div class="feature-block">
-          <div class="feature-content"></div>
-          <div class="feature-img"></div>
+        <div class="feature-section">
+          <div class="feature-block container">
+            <div class="feature-content"></div>
+            <div class="feature-img"></div>
+          </div>
         </div>
-
-        <div class="feature-block">
-          <div class="feature-img"></div>
-          <div class="feature-content"></div>
+        <div class="feature-section">
+          <div class="feature-block container">
+            <div class="feature-img"></div>
+            <div class="feature-content"></div>
+          </div>
         </div>
-
-        <div class="feature-block">
-          <div class="last-feature-content"></div>
+        <div class="feature-section">
+          <div class="feature-block container">
+            <div class="last-feature-content"></div>
+          </div>
         </div>
       </section>
     </main>
+
+    <!-- FOOTER SECTION -->
     <footer>
+      <!-- FIRST FOOTER SECTION -->
       <section class="first-footer-section container">
         <div class="col-social"></div>
         <div class="col-footer"></div>
@@ -58,7 +68,12 @@
         <div class="col-footer"></div>
         <div class="col-footer"></div>
       </section>
-      <section class="second-footer-section"></section>
+
+      <!-- SECOND FOOTER SECTION -->
+      <section class="second-footer-section container">
+        <span class="footer-logo">LOGO</span>
+        <button class="footer-btn">BUTTON</button>
+      </section>
     </footer>
   </body>
 </html>
