General comment fix

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <!-- NAV SECTION -->
       <section class="nav-section">
         <nav>
-          <div id="header-logo"><a href="#">LOGO</a></div>
+          <div><a href="#">LOGO</a></div>
           <ul id="header-nav-list">
             <li><a href="#">Scarica</a></li>
             <li><a href="#">Perché Discord</a></li>
@@ -32,24 +32,28 @@
     <!-- FEATURE SECTION -->
     <main>
       <section>
+        <!-- FIRST FEATURE -->
         <div class="feature-section">
           <div class="feature-block container">
             <div class="feature-img"></div>
             <div class="feature-content"></div>
           </div>
         </div>
+        <!-- SECOND FEATURE -->
         <div class="feature-section">
           <div class="feature-block container">
             <div class="feature-content"></div>
             <div class="feature-img"></div>
           </div>
         </div>
+        <!-- THIRD FEATURE -->
         <div class="feature-section">
           <div class="feature-block container">
             <div class="feature-img"></div>
             <div class="feature-content"></div>
           </div>
         </div>
+        <!-- FOURTH FEATURE -->
         <div class="feature-section">
           <div class="feature-block container">
             <div class="last-feature-content"></div>
