Other html css fix

--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
   <body>
     <header>
       <!-- NAV SECTION -->
-      <section class="nav-section">
-        <nav>
+      <section class="nav-bar">
+        <div class="container nav-section">
           <div><a href="#">LOGO</a></div>
-          <ul id="header-nav-list">
-            <li><a href="#">Scarica</a></li>
-            <li><a href="#">Perché Discord</a></li>
-            <li><a href="#">Nitro</a></li>
-            <li><a href="#">Sicurezza</a></li>
-            <li><a href="#">Assistenza</a></li>
-          </ul>
+          <nav>
+            <ul id="header-nav-list">
+              <li><a href="#">Scarica</a></li>
+              <li><a href="#">Perché Discord</a></li>
+              <li><a href="#">Nitro</a></li>
+              <li><a href="#">Sicurezza</a></li>
+              <li><a href="#">Assistenza</a></li>
+            </ul>
+          </nav>
           <div><a href="#">Accedi</a></div>
-        </nav>
+        </div>
       </section>
 
       <!-- HERO SECTION -->
@@ -33,28 +35,28 @@
     <main>
       <section>
         <!-- FIRST FEATURE -->
-        <div class="feature-section">
+        <div>
           <div class="feature-block container">
             <div class="feature-img"></div>
             <div class="feature-content"></div>
           </div>
         </div>
         <!-- SECOND FEATURE -->
-        <div class="feature-section">
+        <div class="bg-gray">
           <div class="feature-block container">
             <div class="feature-content"></div>
             <div class="feature-img"></div>
           </div>
         </div>
         <!-- THIRD FEATURE -->
-        <div class="feature-section">
+        <div>
           <div class="feature-block container">
             <div class="feature-img"></div>
             <div class="feature-content"></div>
           </div>
         </div>
         <!-- FOURTH FEATURE -->
-        <div class="feature-section">
+        <div class="bg-gray">
           <div class="feature-block container">
             <div class="last-feature-content"></div>
           </div>
@@ -66,17 +68,22 @@
     <footer>
       <!-- FIRST FOOTER SECTION -->
       <section class="first-footer-section container">
-        <div class="col-social"></div>
-        <div class="col-footer"></div>
-        <div class="col-footer"></div>
-        <div class="col-footer"></div>
-        <div class="col-footer"></div>
+        <div class="first-column">
+          <div class="col-social"></div>
+        </div>
+
+        <div class="second-column-section">
+          <div class="col-link"></div>
+          <div class="col-link"></div>
+          <div class="col-link"></div>
+          <div class="col-link"></div>
+        </div>
       </section>
 
       <!-- SECOND FOOTER SECTION -->
       <section class="second-footer-section container">
         <span class="footer-logo">LOGO</span>
-        <button class="footer-btn">BUTTON</button>
+        <a class="footer-btn" href="#">ACCEDI</a>
       </section>
     </footer>
   </body>
